# p2pmesh

./: .gitignore  Cargo.toml  README.md
bridge/: Cargo.toml  build.rs
bridge/.cargo/: config.toml
bridge/src/: lib.rs
bridge/tests/: faucet_test.rs
examples/: identity_bench.rs
src/: lib.rs  main.rs
src/gateway/: collector.rs  mod.rs  settler.rs
src/identity/: did.rs  keypair.rs  mod.rs  signer.rs
src/iou/: builder.rs  codec.rs  mod.rs  model.rs  validator.rs
src/ledger/: conflict.rs  crdt.rs  mod.rs  state.rs
src/storage/: mod.rs  store.rs
src/sync/: gossip.rs  mod.rs  peer.rs  protocol.rs
src/transport/: ble.rs  lora.rs  mod.rs  tcp.rs  traits.rs
src/vault/: balance.rs  mod.rs  spending.rs  utxo.rs
tests/: gateway_tests.rs  iou_tests.rs  ledger_tests.rs  storage_tests.rs  sync_tests.rs  transport_tests.rs
tests/gateway/: collector_test.rs  edge_cases_test.rs  mod.rs  settler_test.rs
tests/identity/: did_test.rs  keypair_test.rs  mod.rs  signer_test.rs
tests/iou/: builder_test.rs  codec_test.rs  edge_cases_test.rs  mod.rs  model_test.rs  validator_test.rs
tests/ledger/: conflict_test.rs  crdt_test.rs  mod.rs  state_test.rs
tests/storage/: mod.rs  store_test.rs
tests/sync/: gossip_test.rs  mod.rs  peer_test.rs  protocol_test.rs
tests/transport/: ble_test.rs  edge_cases_test.rs  lora_test.rs  mod.rs  tcp_test.rs  traits_test.rs
tests/vault/: balance_test.rs  critical_fixes_test.rs  edge_cases_test.rs  mod.rs  spending_test.rs  utxo_test.rs
