[package]
name = "p2pmesh"
version = "0.1.0"
edition = "2021"
description = "Offline-first P2P payment mesh with UTXO-based double-spend prevention"
license = "MIT"

[lib]
name = "p2pmesh"
path = "src/lib.rs"

[[bin]]
name = "mesh"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
base64 = "0.22.1"
bs58 = "0.5.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
hex = "0.4.3"
libp2p = { version = "0.56.0", features = ["tcp", "mdns", "gossipsub", "noise", "yamux", "tokio", "macros", "identify"] }
postcard = { version = "1.1.3", features = ["alloc"] }
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
sled = "0.34.7"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.24.0"
