[package]
name = "p2pmesh-bridge"
version = "0.1.0"
edition = "2021"
description = "UniFFI bridge for p2pmesh - exposes Rust core to Kotlin/Swift"

[lib]
crate-type = ["cdylib", "lib"]
name = "p2pmesh_bridge"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
p2pmesh = { path = ".." }
uniffi = { version = "0.28", features = ["cli"] }
thiserror = "2.0"
tokio = { version = "1.48", features = ["rt-multi-thread"] }
hex = "0.4"
postcard = { version = "1.1", features = ["alloc"] }

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
